# greeting_fastapi

./: README.md  pyproject.toml
src/greeting_fastapi/: main.py
